--- a/event.yaml
+++ b/event.yaml
@@ -3,7 +3,7 @@ date: 3 августа, наконец-то!
 
 
 facebook: https://www.facebook.com/groups/kiev.fprog/
-twitter: https://twitter.com/search?q=%23kievfprog
+twitter: https://twitter.com/search/realtime?q=%23kievfprog
 ical: https://www.facebook.com/ical/event.php?eid=209780979175410
 rsvp: https://www.facebook.com/events/209780979175410/
 
