--- a/event.yaml
+++ b/event.yaml
@@ -25,6 +25,11 @@ talks:
     timing: 13:00 — 13:40
     url: https://twitter.com/kachayev
     photo: https://secure.gravatar.com/avatar/b9b7a5ffa24e2af6f877a7950461ba0f?s=420&d=https://a248.e.akamai.net/assets.github.com%2Fimages%2Fgravatars%2Fgravatar-user-420.png
+  - speaker: ''
+    talk: еще будет анонсирован
+    timing: 14:00 - 14:40
+    url:
+    photo: https://si0.twimg.com/profile_images/3239312258/b225bba2557973dd8daac7eaa5cb0475.jpeg
 
 venue: Ciklum SkyPoint
 venue-address: Киев, Амосова 12, БЦ Горизонт Парк, дальняя башня, 20-ый этаж
