--- a/event.yaml
+++ b/event.yaml
@@ -35,4 +35,4 @@ venue: Ciklum SkyPoint
 venue-address: Киев, Амосова 12, БЦ Горизонт Парк, дальняя башня, 20-ый этаж
 venue-map:
 
-copyright: 2013 @darkproger
+copyright: 2013 @darkproger, powered by illumos, fastly and random hacks
