--- a/event.yaml
+++ b/event.yaml
@@ -33,6 +33,6 @@ talks:
 
 venue: Ciklum SkyPoint
 venue-address: Киев, Амосова 12, БЦ Горизонт Парк, дальняя башня, 20-ый этаж
-venue-map:
+venue-center: '[30.505920306884732, 50.42265149832428]'
 
-copyright: 2013 @darkproger, powered by illumos, fastly and random hacks
+copyright: 2013 @darkproger. site powered by illumos, fasdasastly and random hacks. maps by yandex.
