--- a/event.yaml
+++ b/event.yaml
@@ -35,4 +35,4 @@ venue: Ciklum SkyPoint
 venue-address: Киев, Амосова 12, БЦ Горизонт Парк, дальняя башня, 20-ый этаж
 venue-center: '[30.505920306884732, 50.42265149832428]'
 
-copyright: 2013 @darkproger. site powered by illumos, fasdasastly and random hacks. maps by yandex.
+copyright: 2013 @darkproger. site powered by illumos, fastly and random hacks. maps by yandex.
