--- a/event.yaml
+++ b/event.yaml
@@ -23,7 +23,7 @@ talks:
     photo: https://secure.gravatar.com/avatar/d91a0ffee363be9c58e689fc7fd20599?s=420&d=https://a248.e.akamai.net/assets.github.com%2Fimages%2Fgravatars%2Fgravatar-user-420.png
 
   - speaker: '@kachayev'
-    talk: CRDT
+    talk: Сhannel-based concurrency with Go / Clojure / Erlang
     timing: 13:00 — 13:40
     url: https://twitter.com/kachayev
     photo: https://secure.gravatar.com/avatar/b9b7a5ffa24e2af6f877a7950461ba0f?s=420&d=https://a248.e.akamai.net/assets.github.com%2Fimages%2Fgravatars%2Fgravatar-user-420.png
