--- a/event.yaml
+++ b/event.yaml
@@ -10,6 +10,7 @@ rsvp1: https://docs.google.com/forms/d/1L0Aqs6GsgOMa-jXrJDNvLKPdTfKBmS3VnqijFLQm
 
 streamurl: none yet
 
+non-finalized-timing: true
 talks:
   - speaker: '@true_droid'
     talk: Elixir
@@ -24,7 +25,7 @@ talks:
     photo: https://secure.gravatar.com/avatar/d91a0ffee363be9c58e689fc7fd20599?s=420&d=https://a248.e.akamai.net/assets.github.com%2Fimages%2Fgravatars%2Fgravatar-user-420.png
 
   - speaker: '@kachayev'
-    talk: Сhannel-based concurrency with Go / Clojure / Erlang
+    talk: Сhannel concurrency with Go/Clojure/Erlang
     timing: 13:00 — 13:40
     url: https://twitter.com/kachayev
     photo: https://secure.gravatar.com/avatar/b9b7a5ffa24e2af6f877a7950461ba0f?s=420&d=https://a248.e.akamai.net/assets.github.com%2Fimages%2Fgravatars%2Fgravatar-user-420.png
@@ -35,9 +36,15 @@ talks:
     url: http://github.com/maximk
     photo: https://secure.gravatar.com/avatar/1338ea36e4b2725e7b7304bf17119b38?s=420&d=https://a248.e.akamai.net/assets.github.com%2Fimages%2Fgravatars%2Fgravatar-user-420.png
 
+  - speaker: '@rssh1'
+    talk: Как реализовать Go в Scala
+    timing: 15:00 - 15:40
+    url: http://twitter.com/rssh1
+    photo: https://secure.gravatar.com/avatar/c87d4df27b1b9684cd84d143b069ec83?s=420&d=https://a248.e.akamai.net/assets.github.com%2Fimages%2Fgravatars%2Fgravatar-user-420.png
+
   - speaker: котик
     talk: TBA / ваш доклад
-    timing: 15:00 - 15:40
+    timing: 16:00 - 16:40
     url: http://twitter.com/dtrace_kitty
     photo: https://si0.twimg.com/profile_images/3239312258/b225bba2557973dd8daac7eaa5cb0475.jpeg
 
