--- a/event.yaml
+++ b/event.yaml
@@ -42,9 +42,15 @@ talks:
     url: http://twitter.com/rssh1
     photo: https://secure.gravatar.com/avatar/c87d4df27b1b9684cd84d143b069ec83?s=420&d=https://a248.e.akamai.net/assets.github.com%2Fimages%2Fgravatars%2Fgravatar-user-420.png
 
+  - speaker: '@lambdamix'
+    talk: Зависимые типы
+    timing: 16:00 - 16:40
+    url: http://twitter.com/lambdamix
+    photo: https://si0.twimg.com/profile_images/3395648752/e1739470c7c1bb346676f5f0717f06f0.png
+
   - speaker: котик
     talk: TBA / ваш доклад
-    timing: 16:00 - 16:40
+    timing: 17:00 - 17:40
     url: http://twitter.com/dtrace_kitty
     photo: https://si0.twimg.com/profile_images/3239312258/b225bba2557973dd8daac7eaa5cb0475.jpeg
 
