--- a/event.yaml
+++ b/event.yaml
@@ -81,7 +81,7 @@ materials:
   - author:
     photo: 
     author-url:
-    title: Видео
+    title: Видео (скоро)
     url:
 
 venue: Ciklum SkyPoint
