--- a/event.yaml
+++ b/event.yaml
@@ -6,14 +6,14 @@ facebook: https://www.facebook.com/groups/kiev.fprog/
 twitter: https://twitter.com/search/realtime?q=%23kievfprog
 ical: https://www.facebook.com/ical/event.php?eid=1427187537499479
 rsvp: https://www.facebook.com/events/1427187537499479/
-#rsvp1: https://docs.google.com/forms/d/1L0Aqs6GsgOMa-jXrJDNvLKPdTfKBmS3VnqijFLQmAqM/viewform
+rsvp1: https://docs.google.com/a/wilab.org.ua/forms/d/1gjK2FTBcoDSFWbFoVn7_w9kowGrJwOCQcwmJp4WrysI/viewform
 past: false
 #rsvp: false
-rsvp1: false
+#rsvp1: false
 
 streamurl: false
 
-non-finalized-timing: true
+non-finalized-timing: false
 talks:
   - speaker: '@atlanter'
     talk: JScala
@@ -29,19 +29,19 @@ talks:
 
   - speaker: '@kachayev'
     talk: Erlang in production. Lessons learned
-    timing: 12:40 - 13:20
+    timing: 12:40 - 13:50
     url: https://twitter.com/kachayev
     photo: https://secure.gravatar.com/avatar/b9b7a5ffa24e2af6f877a7950461ba0f?s=420&d=https://a248.e.akamai.net/assets.github.com%2Fimages%2Fgravatars%2Fgravatar-user-420.png
 
   - speaker: '@5HT'
     talk: Erlang без хеш-таблиц
-    timing: 13:40 — 14:20
+    timing: 14:00 - 14:40
     url: https://twitter.com/5HT
     photo: https://secure.gravatar.com/avatar/d91a0ffee363be9c58e689fc7fd20599?s=420&d=https://a248.e.akamai.net/assets.github.com%2Fimages%2Fgravatars%2Fgravatar-user-420.png
 
   - speaker: '@asolovyov'
     talk: Clojure/CLJS в жизни с реальными людьми, ггг
-    timing: 14:40 - 15:20
+    timing: 14:50 - 15:30
     url: https://twitter.com/asolovyov
     photo: https://pbs.twimg.com/profile_images/378800000541660208/0b86a9e6a1f5d84ba08064e95a67c7c7.jpeg
 
