--- a/event.yaml
+++ b/event.yaml
@@ -1,56 +1,37 @@
-event: kiev::fprog
-date: 16 ноября
+event: kiev::fprog специальный выпуск
+date: 14 июня
 
 
 facebook: https://www.facebook.com/groups/kiev.fprog/
 twitter: https://twitter.com/search/realtime?q=%23kievfprog
-ical: https://www.facebook.com/ical/event.php?eid=1427187537499479
-#rsvp: https://www.facebook.com/events/1427187537499479/
-#rsvp1: https://docs.google.com/a/wilab.org.ua/forms/d/1gjK2FTBcoDSFWbFoVn7_w9kowGrJwOCQcwmJp4WrysI/viewform
+ical: https://www.facebook.com/ical/event.php?eid=1489824581249853
+rsvp: https://www.facebook.com/events/1489824581249853/
+rsvp1:
 past: false
-rsvp: false
+rsvp: true
 rsvp1: false
 
-streamurl: http://new.livestream.com/accounts/4893877/events/2550946
+streamurl:
 
-non-finalized-timing: false
+non-finalized-timing: true
 talks:
-  - speaker: '@atlanter'
-    talk: JScala
-    timing: 11:00 — 11:40
-    url: https://twitter.com/atlanter
-    photo: https://fbcdn-profile-a.akamaihd.net/hprofile-ak-prn1/c39.39.487.487/s160x160/946371_10151806146527384_734029411_n.jpg
+  - speaker: '@janstepien'
+    talk: Migrating to Clojure - so much fn
+    timing: 12:00 — 12:40
+    url: https://twitter.com/janstepien
+    photo: https://pbs.twimg.com/profile_images/1250399112/avatar.jpg
 
-  - speaker: '@pokutnik'
-    talk: Elm
-    timing: 12:00 — 12:20
-    url: https://twitter.com/pokutnik
-    photo: https://fbcdn-profile-a.akamaihd.net/hprofile-ak-prn1/c41.63.259.259/s160x160/66596_1433235432643_7325878_n.jpg
-
-  - speaker: '@kachayev'
-    talk: Erlang in production. Lessons learned
-    timing: 12:40 - 13:50
-    url: https://twitter.com/kachayev
-    photo: https://secure.gravatar.com/avatar/b9b7a5ffa24e2af6f877a7950461ba0f?s=420&d=https://a248.e.akamai.net/assets.github.com%2Fimages%2Fgravatars%2Fgravatar-user-420.png
-
-  - speaker: '@5HT'
-    talk: Erlang без хеш-таблиц
-    timing: 14:00 - 14:40
-    url: https://twitter.com/5HT
-    photo: https://secure.gravatar.com/avatar/d91a0ffee363be9c58e689fc7fd20599?s=420&d=https://a248.e.akamai.net/assets.github.com%2Fimages%2Fgravatars%2Fgravatar-user-420.png
-
-  - speaker: '@asolovyov'
-    talk: Clojure/CLJS в жизни с реальными людьми, ггг
-    timing: 14:50 - 15:30
-    url: https://twitter.com/asolovyov
-    photo: https://pbs.twimg.com/profile_images/378800000541660208/0b86a9e6a1f5d84ba08064e95a67c7c7.jpeg
-
+  - speaker: '@shebang'
+    talk: Extensible Effects in Haskell
+    timing: 13:00 — 13:40
+    url: https://twitter.com/shebang
+    photo: https://pbs.twimg.com/profile_images/458731352758579200/TSideAqh.jpeg
 
 display-materials: false
 materials:
 
-venue: Ciklum SkyPoint
-venue-address: Киев, Амосова 12, БЦ Горизонт Парк, дальняя башня, 20-ый этаж
-venue-center: '[30.505920306884732, 50.42265149832428]'
+venue: Следите за новостями
+venue-address: TBA
+#venue-center: '[30.505920306884732, 50.42265149832428]'
 
-copyright: 2013 @darkproger. site powered by illumos, fastly and random hacks. maps by yandex.
+copyright: 2013-2014 @darkproger. site powered by github pages. maps by yandex.
