--- a/event.yaml
+++ b/event.yaml
@@ -6,7 +6,7 @@ facebook: https://www.facebook.com/groups/kiev.fprog/
 twitter: https://twitter.com/search/realtime?q=%23kievfprog
 ical: https://www.facebook.com/ical/event.php?eid=1489824581249853
 rsvp: https://www.facebook.com/events/1489824581249853/
-rsvp1:
+rsvp1: https://docs.google.com/forms/d/1kSJ7jSzn6Y21ZIlG4ddg2wtY_gDUszmfgZ9bPIi2iuA/viewform?usp=send_form
 past: false
 
 streamurl:
