--- a/event.yaml
+++ b/event.yaml
@@ -20,7 +20,7 @@ talks:
   - speaker: '@секрет'
     talk: Что-то про Haskell
     timing: "12:00"
-    photo: http://i.stack.imgur.com/MAMOg.png
+    photo: http://www.cliparts101.com/files/848/40654A3F6FECA806F4974BEEE218964C/Greek_Lambda_4.png
 
   - speaker: '@секрет'
     talk: Что-то провокационное
