--- a/event.yaml
+++ b/event.yaml
@@ -6,6 +6,7 @@ facebook: https://www.facebook.com/groups/kiev.fprog/
 twitter: https://twitter.com/search/realtime?q=%23kievfprog
 ical: https://www.facebook.com/ical/event.php?eid=1043526685681601
 rsvp: https://www.facebook.com/events/1043526685681601/
+rsvp1: http://goo.gl/forms/6sGXNwgwbs
 past: false
 
 streamurl:
