--- a/event.yaml
+++ b/event.yaml
@@ -1,11 +1,11 @@
-event: "#kievfprog 2016"
-date: November 26
+event: "#kievfprog 2017.1"
+date: March 18
 
 
-facebook: https://www.facebook.com/groups/kiev.fprog/
+facebook: https://fb.me/kievfprog
 twitter: https://twitter.com/kievfprog
 #ical:
-rsvp: http://2016.kievfprog.net
+rsvp: http://march17.kievfprog.net
 #rsvp1:
 past: false
 
@@ -21,4 +21,4 @@ venue-address:
 venue-center:
 venue-url:
 
-copyright: 2013-2016 kievfprog fellows
+copyright: 2012-2017 kievfprog fellows
